--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- Material Icon -->
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet" />
+    
+    <title>Aplikasi Informasi Lomba, Event, Beasiswa, Webinar no 1 di Indonesia Untuk Mahasiswa dan SMA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
